--- a/status.html
+++ b/status.html
@@ -54,7 +54,7 @@
     <script>
         // WPISZ TUTAJ SWOJE UNIVERSE ID (nie Place ID!)
         // Universe ID znajdziesz w ustawieniach gry na Roblox Create
-        const UNIVERSE_ID = "TWÓJ_UNIVERSE_ID_TUTAJ"; 
+        const UNIVERSE_ID = "9489250102"; 
 
         async function updateStatus() {
             try {
@@ -81,3 +81,4 @@
     </script>
 </body>
 </html>
+
