--- a/status.html
+++ b/status.html
@@ -46,7 +46,7 @@
         <div class="status-card">
             <div style="font-size: 1.5em; font-weight: bold;"><span class="dot"></span> <span id="server-status">Ładowanie...</span></div>
             <div class="info-item">Graczy online: <strong id="player-count">--</strong></div>
-            <div class="info-item" style="font-size: 0.9em; color: gray;">Wersja: Gruchowice_v1.0.4</div>
+            <div class="info-item" style="font-size: 0.9em; color: gray;">Wersja: Gruchowice RP | 1.0 </div>
         </div>
     </main>
     <footer><p>© 2026 Gruchowice RP. Strona utworzona przez: youngmajster_</p></footer>
@@ -81,4 +81,5 @@
     </script>
 </body>
 </html>
+
 
